Remove uses of deprecated Class.newInstance() method